--- a/DATEX.ipynb
+++ b/DATEX.ipynb
@@ -183,6 +183,105 @@
     "df_encoded.to_csv(output_path, index=False)\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aggregate data by game and team\n",
+    "aggregated = df_encoded.groupby(['game_id', 'posteam']).agg({\n",
+    "    'yards_gained': 'sum',\n",
+    "    'receiving_yards': 'sum',\n",
+    "    'rushing_yards': 'sum',\n",
+    "    'return_yards': 'sum',\n",
+    "    'incomplete_pass': 'sum',\n",
+    "    'complete_pass': 'sum',\n",
+    "    'interception': 'sum',\n",
+    "    'pass_attempt': 'sum',\n",
+    "    'rush_attempt': 'sum',\n",
+    "    'touchdown': 'sum',\n",
+    "    'pass_touchdown': 'sum',\n",
+    "    'rush_touchdown': 'sum',\n",
+    "    'return_touchdown': 'sum',\n",
+    "    'first_down': 'sum',\n",
+    "    'play': 'sum',\n",
+    "    'sack': 'sum',\n",
+    "    'fumble': 'sum',\n",
+    "    'fumble_lost': 'sum',\n",
+    "    'field_goal_result_made': 'sum',\n",
+    "    'field_goal_result_missed': 'sum',\n",
+    "    'extra_point_result_good': 'sum',\n",
+    "    'extra_point_result_failed': 'sum',\n",
+    "    'safety': 'sum',\n",
+    "    'total_home_epa': 'max',\n",
+    "    'total_away_epa': 'max',\n",
+    "    'total_home_score': 'max',\n",
+    "    'total_away_score': 'max',\n",
+    "    'total': 'max'\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Make a copy of the dataframe but swap the teams to calculate defensive stats\n",
+    "df_defense = df_encoded.copy()\n",
+    "\n",
+    "# Swap posteam with the opposing team to get the defensive stats for the right team\n",
+    "df_defense['posteam'] = df_defense.apply(\n",
+    "    lambda row: row['home_team'] if row['posteam'] == row['away_team'] else row['away_team'], axis=1)\n",
+    "\n",
+    "# Aggregate the data by game and posteam (now representing the defensive side)\n",
+    "aggregated_defense = df_defense.groupby(['game_id', 'posteam']).agg({\n",
+    "    'yards_gained': 'sum',\n",
+    "    'first_down': 'sum',\n",
+    "    'touchdown': 'sum',\n",
+    "    'play': 'sum',\n",
+    "    'interception': 'sum',\n",
+    "    'fumble_forced': 'sum',\n",
+    "    'fumble_lost': 'sum',\n",
+    "    'total_home_score': 'max',\n",
+    "    'total_away_score': 'max',\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Rename columns to make it clear these are defensive stats\n",
+    "aggregated_defense.rename(columns={\n",
+    "    'yards_gained': 'yards_allowed',\n",
+    "    'first_down': 'first_down_allowed',\n",
+    "    'touchdown': 'touchdowns_allowed',\n",
+    "    'interception': 'turnovers_gained',\n",
+    "    'fumble_forced': 'fumbles_forced',\n",
+    "    'fumble_lost': 'fumbles_recovered',\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Now merge this defensive aggregated dataframe back with the original offensive one\n",
+    "aggregated = aggregated.merge(aggregated_defense, on=['game_id', 'posteam'], suffixes=('', '_defense'))\n",
+    "\n",
+    "# Add offensive calculated stats: yards per play, points per play, first down rate, and number of turnovers (lost)\n",
+    "aggregated['yards_per_play_offense'] = aggregated['yards_gained'] / aggregated['play']\n",
+    "aggregated['points_per_play_offense'] = (aggregated['total_home_score'] + aggregated['total_away_score']) / aggregated['play']\n",
+    "aggregated['first_down_rate_offense'] = aggregated['first_down'] / aggregated['play']\n",
+    "aggregated['turnovers_lost'] = aggregated['interception'] + aggregated['fumble_lost']\n",
+    "\n",
+    "# Add defensive calculated stats: yards per play allowed, points per play allowed, first down rate allowed, and turnovers gained\n",
+    "aggregated['yards_per_play_allowed'] = aggregated['yards_allowed'] / aggregated['play_defense']\n",
+    "aggregated['points_per_play_allowed'] = (aggregated['total_home_score_defense'] + aggregated['total_away_score_defense']) / aggregated['play_defense']\n",
+    "aggregated['first_down_rate_allowed'] = aggregated['first_down_allowed'] / aggregated['play_defense']\n",
+    "\n",
+    "# Turnovers gained by defense (interceptions + fumbles recovered)\n",
+    "aggregated['turnovers_gained'] = aggregated['turnovers_gained'] + aggregated['fumbles_recovered']\n",
+    "\n",
+    "# add special teams calculated stats: fg percentage, xp percentage\n",
+    "aggregated['fg_percentage'] = aggregated['field_goal_result_made'] / (\n",
+    "        aggregated['field_goal_result_made'] + aggregated['field_goal_result_missed'])\n",
+    "aggregated['xp_percentage'] = aggregated['extra_point_result_good'] / (\n",
+    "        aggregated['extra_point_result_good'] + aggregated['extra_point_result_failed'])\n",
+    "\n",
+    "# Add turnover differential\n",
+    "aggregated['turnover_differential'] = aggregated['turnovers_gained'] - aggregated['turnovers_lost']\n",
+    "\n",
+    "\n",
+    "output_path = r\"C:/Users/alrec/Desktop/DAT Capstone/df_transform.csv\"\n",
+    "aggregated.to_csv(output_path, index=False)\n"
+   ]
   }
  ],
  "metadata": {
