updated file saving

--- a/main.ipynb
+++ b/main.ipynb
@@ -366,7 +366,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select features to be used in models\n",
+    "features = ['yards_per_play_offense', 'first_down_rate_offense', 'yards_per_play_allowed', \n",
+    "            'first_down_rate_allowed', 'turnover_differential']\n",
+    "# select target_variable\n",
+    "target_variable = 'win'\n",
+    "\n",
+    "# create X (df of feature columns) and y (series for the target variable)\n",
+    "X = transformed_df[features]\n",
+    "y = transformed_df[target_variable]\n",
+    "    \n",
+    "# split into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -386,19 +406,6 @@
     }
    ],
    "source": [
-    "# select features to be used in models\n",
-    "features = ['yards_per_play_offense', 'first_down_rate_offense', 'yards_per_play_allowed', \n",
-    "            'first_down_rate_allowed', 'turnover_differential']\n",
-    "# select target_variable\n",
-    "target_variable = 'win'\n",
-    "\n",
-    "# create X (df of feature columns) and y (series for the target variable)\n",
-    "X = transformed_df[features]\n",
-    "y = transformed_df[target_variable]\n",
-    "    \n",
-    "# split into train and test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# create and evaluate linear regression model\n",
     "linreg_model = LinearRegression()\n",
     "linreg_model.fit(X_train, y_train)\n",
@@ -707,6 +714,7 @@
     "        joblib.dump(ridge_model, f'{filepath}/ridge_model.pkl')\n",
     "        joblib.dump(lasso_model, f'{filepath}\\lasso_model.pkl')\n",
     "        joblib.dump(rf_model, f'{filepath}/rf_model.pkl')\n",
+    "        joblib.dump(logreg_model, f'{filepath}/logreg_model.pkl')\n",
     "        print('models saved')\n",
     "    \n",
     "    print(\"Would you like to save the data to a folder? (y/n)\")\n",
@@ -722,8 +730,18 @@
     "        \n",
     "        df.to_csv(os.path.join(filepath, 'df.csv'), index=False)\n",
     "        filtered_df.to_csv(os.path.join(filepath, 'filtered_df.csv'), index=False)\n",
+    "        encoded_df.to_csv(os.path.join(filepath, 'encoded_df.csv'), index=False)\n",
     "        aggregated_df.to_csv(os.path.join(filepath, 'aggregated_df.csv'), index=False)\n",
     "        transformed_df.to_csv(os.path.join(filepath, 'transformed_df.csv'), index=False)\n",
+    "\n",
+    "        df_current(os.path.join(filepath, 'df_current.csv'), index=False)\n",
+    "        filtered_df_current(os.path.join(filepath, 'filtered_df_current.csv'), index=False)\n",
+    "        encoded_df_current(os.path.join(filepath, 'encoded_df_current.csv'), index=False)\n",
+    "        aggregated_df_current(os.path.join(filepath, 'aggregated_df_current.csv'), index=False)\n",
+    "        transformed_df_current(os.path.join(filepath, 'transformed_df_current.csv'), index=False)\n",
+    "\n",
+    "        season_team_df_2024(os.path.join(filepath, 'season_team_df_2024.csv'), index=False)\n",
+    "        scaled_df_2024(os.path.join(filepath, 'scaled_df_2024.csv'), index=False)\n",
     "\n",
     "        print('Data saved successfully')\n"
    ]
